2009-07-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-ecl.lisp (find-external-format): Copied from
	swank-sbcl.lisp. A lot of backends seem to share the same
	implementation, perhaps some refactoring is needed.

2009-07-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (make-repl-input-stream): Make sure to redirect
	output from slime requests to the REPL buffer for
	communication-style=NIL.

2009-07-02  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-beginning-of-symbol): Limit searching to 2000
	characters.

2009-07-02  Terje Norderhaug <terje@in-progress.com>

	* swank-lispworks.lisp (thread-attributes): Implemented.

2009-07-02  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (ed-in-emacs): Handle symbols/function-names better.
	* slime.el (slime-ed): Updated accordingly.

2009-07-02  Terje Norderhaug <terje@in-progress.com>

	* swank.lisp (operator-arglist): Don't use pprint-fill
	for people with wide screens.

2009-07-02  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-net-coding-system): make it customizable.
	(slime-inspector-operate-on-click): Make --more-- button in
	the inspector clickable.

2009-06-30  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Package profiling support

2009-06-30  Stas Boukarev  <stassats@gmail.com>

	* swank-openmcl.lisp (arglist): Return :not-available if the arglist
	cannot be obtained. Patch by Terje Norderhaug.

2009-06-29  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (open-streams): do not create unnecessary output stream
	when using dedicated output stream. Thanks to Terje Norderhaug.

2009-06-28  Terje Norderhaug <terje@in-progress.com>

	Generalize list-threads for implementation-dependent attributes.

	* swank-backend.lisp (thread-attributes): New function.
	* swank-openmcl (thread-attributes): Implement it.
	* swank.lisp (list-threads): Return a table with the attribute
	names as the first row and the new attributes in the last columns.